feature: ファイルだけ先に追加。

--- a/lessons/program/intro/1.md
+++ b/lessons/program/intro/1.md
@@ -3,7 +3,7 @@ author: Sora Tonami
 date: 2025/04/23
 description: ロボット制御のための環境を整えよう！
 layout: default
-modified: 2025/04/23
+modified: 2025/05/05
 title: 環境を整えよう その1 \| ロボット制御入門 \| 制御講習
 title-short: 環境を整えよう その1
 ---
@@ -29,8 +29,7 @@ JetBrains CLionを始めとするJetBrains製品を管理するヤツです。\
 ### STM32CubeMX
 
 弊部で使ってるマイコン向けのプログラムのテンプレートを吐いてくれるヤツです。tskr\
-Arch
-Linux・NixOSユーザー以外は要MyST垢です。\
+Arch Linux・NixOSユーザー以外は要MyST垢です。\
 (やろうと思えば直リンクで全環境不要にも出来るんだろうけど複雑になりそーなので却下)
 
 ### Arm GNU Toolchain
