fix: 導線分かりにくい。

--- a/lessons/program/intro/1.md
+++ b/lessons/program/intro/1.md
@@ -10,6 +10,8 @@ title-short: 環境を整えよう その1
 
 ロボットの制御をするためには様々なツールが必要です。\
 今回はまずどのようなツール・アカウントが必要なのか、ざっくり説明します。\
+\*\*実際に導入するのは次回で、\*\*今回は紹介＆垢作成です。
+
 あ、さっさと環境作りたいから別に説明要らんよって人は先進んでいいよ。
 
 (足りなかったらIssue投げて下さい)
