feature: 制御講習: プロジェクト作成を追加。WIP

--- a/lessons/program/intro/3.md
+++ b/lessons/program/intro/3.md
@@ -3,9 +3,37 @@ author: Sora Tonami
 date: 2025/04/23
 description: 実際にプロジェクトを作ってみよう！
 layout: default
-modified: 2025/05/05
+modified: 2025/05/07
 title: プロジェクトを作ってみよう \| ロボット制御入門 \| 制御講習
 title-short: プロジェクトを作ってみよう
 ---
 
+前回、無事に環境を作り終わったと思うのでプロジェクトを作りましょう。
+
+## STM32CubeMXパート
+
+### プロジェクト作成
+
+まずプロジェクトをテンプレから作るので**STM32CubeMX**を開きます。
+
+![STM32CubeMXのトップ画面]
+
+今回はNUCLEO-F446REを使うので囲ってるボタン↑からプロジェクト作成画面を呼び出します。
+
+![STM32CubeMXのプロジェクト作成画面、初期状態]
+
+ちょっと待つとこんなの↑が出てくるはずなので赤で囲ったテキストボックスに`NUCLEO-F446RE`とぶち込みましょう。\
+**青で囲ったトコではない**ので注意。
+
+![STM32CubeMXのプロジェクト作成画面、NUCLEO-F446REを選択している状態]
+
+絞り込まれると右下にNUCLEO-F446REが出てくるので、これをクリック(①)した後、「Start Project」を押して(②)下さい。\
+何か出ますが取り敢えずYes押しといて下さい。デフォルト設定が適用されるので楽になります。
+
+### プロジェクト編集
+
 (WIP)
+
+[stm32cubemxのトップ画面]: /assets/lessons/program/cubemx-top.png
+[stm32cubemxのプロジェクト作成画面、nucleo-f446reを選択している状態]: /assets/lessons/program/cubemx-create-2.png
+[stm32cubemxのプロジェクト作成画面、初期状態]: /assets/lessons/program/cubemx-create-1.png
