feature: 制御講習: プロジェクト作成を追加。

--- a/lessons/program/intro/1.md
+++ b/lessons/program/intro/1.md
@@ -64,7 +64,8 @@ JetBrains CLionを始めとするJetBrains製品を管理するヤツです。\
 
 ## 次回予告
 
-次回は実際にインストールしていきます。自分の環境に合った方のページへ進んでください。
+今回でツールの概要の説明とアカウント作成が終わりました。\
+次回は実際にこれらのツールをインストールしていきます。自分の環境に合った方のページへ進んでください。
 
 - [Linux編](2-linux)
 - [Windows編](2-win)
