--- a/lessons/program/intro/3.md
+++ b/lessons/program/intro/3.md
@@ -10,9 +10,7 @@ title-short: プロジェクトを作ってみよう
 
 前回、無事に環境を作り終わったと思うのでプロジェクトを作りましょう。
 
-## STM32CubeMXパート
-
-### プロジェクト作成
+## プロジェクト作成
 
 まずプロジェクトをテンプレから作るので**STM32CubeMX**を開きます。
 
@@ -28,12 +26,89 @@ title-short: プロジェクトを作ってみよう
 ![STM32CubeMXのプロジェクト作成画面、NUCLEO-F446REを選択している状態]
 
 絞り込まれると右下にNUCLEO-F446REが出てくるので、これをクリック(①)した後、「Start Project」を押して(②)下さい。\
-何か出ますが取り敢えずYes押しといて下さい。デフォルト設定が適用されるので楽になります。
+なんか出ますが取り敢えずYes押しといて下さい。デフォルト設定が適用されるので楽になります。
 
-### プロジェクト編集
+## プロジェクト編集
 
-(WIP)
+しばらく待つとなんか出てきます。
 
+![STM32CubeMXのピン設定画面、初期状態]
+
+コイツがピン編集画面ですが、まず先に赤で囲ったトコを押してクロック編集画面に移ります。
+
+![stm32cubemxのクロック設定画面]
+
+まず①を`180`に変更し、そのままEnterを押すか②を押すかをすると他の部分をいい感じに設定してくれます。便利。
+
+③でピン設定画面に戻ります。
+
+![STM32CubeMXのピン設定画面、A to Zへ変更]
+
+まず機能一覧をA to Zにして(①)、TIM3を選択(②)します。
+
+![STM32CubeMXのピン設定画面、タイマー3のチャンネル3のPWM設定]
+
+TIM3、タイマー3の設定が開きます。\
+タイマーは、一定間隔で処理したりn回入力された時に処理したりするための機能です。
+
+赤で囲ったチャンネル3の設定を変更(①)します。\
+`PWM Generation CH3`を選びます。`Output Compare 〜`や`PWM Generation No Output`ではないので注意。
+
+変更したら右のピンのPB0に割り当てられますが、今回はPC8に割り当てたいのでCtrlキーを押しながらD&Dして(②)下さい。
+
+![STM32CubeMXのピン設定画面、USART3の設定]
+
+次に、USART3を選択(①)します。\
+USART・UARTとは、基板同士で通信するための機能です。\
+USARTはUARTの上位互換らしいです。が、UARTとしてしか筆者は使ったことがないのでよー分からんです。
+
+Modeで`Asynchronous`を選択(②)します。これでUARTとして機能します。
+
+NVIC Settingsを選択(③)してチェックを入れます(④)。\
+これで受信処理を書けます。
+
+これで今回必要なピン設定は終わりました。⑤からプロジェクト設定画面に移ります。
+
+![STM32CubeMXのプロジェクト設定画面、基本設定]
+
+ここではプロジェクトの生成方法などを設定します。
+
+まずプロジェクト名を設定(①)します。講習用のプロジェクトなんで自分で分かりゃなんでもいいです。
+
+次にプロジェクトの場所を設定(②)します。右のBrowseから選択したりパスをコピペしたりして設定します。\
+例えば`/home/foobar/Documents`とした場合`/home/foobar/Documents/(プロジェクト名)`以下に生成され、\
+`C:\Users\foobar\Documents`とした場合`C:\Users\foobar\Documents\(プロジェクト名)`以下に生成されます。
+
+プロジェクトの生成場所の設定が終わったので、生成するファイル共の種類を設定(③)します。\
+今回はCMakeを使うので`CMake`に設定します。
+
+ここまで終わったら④から次の設定に移ります。
+
+![STM32CubeMXのプロジェクト設定画面、コードジェネレーター設定]
+
+こっちは実際に生成されるコードに関する設定です。
+
+まず、ファイルを分割し編集しやすく(①)します。
+
+次に、使ってないピンの電源供給を止めて省エネにします(②)。
+
+以上で全てのプロジェクト設定が終わった...はずなので右上のボタン(③)を押してコードを生成します。\
+なんかYes/No聞いてくる時はYesと答えて下さい。ファームウェアの更新です。
+
+## 次回予告
+
+今回で必要なプロジェクトは無事に作成し終わりました。\
+次回はゴールにはあまり関係はないですが、エアシリンダーを動かします。
+
+[次へ](4)
+
+[stm32cubemxのクロック設定画面]: /assets/lessons/program/cubemx-edit-2.png
 [stm32cubemxのトップ画面]: /assets/lessons/program/cubemx-top.png
+[stm32cubemxのピン設定画面、a to zへ変更]: /assets/lessons/program/cubemx-edit-3.png
+[stm32cubemxのピン設定画面、usart3の設定]: /assets/lessons/program/cubemx-edit-5.png
+[stm32cubemxのピン設定画面、タイマー3のチャンネル3のpwm設定]: /assets/lessons/program/cubemx-edit-4.png
+[stm32cubemxのピン設定画面、初期状態]: /assets/lessons/program/cubemx-edit-1.png
 [stm32cubemxのプロジェクト作成画面、nucleo-f446reを選択している状態]: /assets/lessons/program/cubemx-create-2.png
 [stm32cubemxのプロジェクト作成画面、初期状態]: /assets/lessons/program/cubemx-create-1.png
+[stm32cubemxのプロジェクト設定画面、コードジェネレーター設定]: /assets/lessons/program/cubemx-edit-7.png
+[stm32cubemxのプロジェクト設定画面、基本設定]: /assets/lessons/program/cubemx-edit-6.png
