feature: 制御講習: 次回予告だけ先に書いた。

--- a/lessons/program/intro/4.md
+++ b/lessons/program/intro/4.md
@@ -8,4 +8,14 @@ title: エアシリンダーを動かしてみよう \| ロボット制御入門
 title-short: エアシリンダーを動かしてみよう
 ---
 
+いよいよ前回作ったプロジェクトで開発していきます。\
+今回はエアシリンダーを動かします。CLionを開いて下さい。
+
 (WIP)
+
+## 次回予告
+
+今回はエアシリンダーを動かしました。実は全く同じ方法でLEDも光らせたり出来ます。(ただのON/OFFなため)\
+次回は足回りの肝、モーターを動かします。
+
+[次へ](5)
