--- a/lessons/program/intro/6.md
+++ b/lessons/program/intro/6.md
@@ -8,4 +8,14 @@ title: コントローラーを受信してみよう \| ロボット制御入門
 title-short: コントローラーを受信してみよう
 ---
 
+今回は、今までのアクチュエーターとは打って変わって通信系です。\
+コントローラーで操作するために信号を受信します。
+
 (WIP)
+
+## 次回予告
+
+今回まででロボットを最低限動かすための知見が溜まったと思います。\
+次回はこれまでの内容を元に、足回りを動かします。
+
+[次へ](7)
