feature: 制御講習/ロボット制御入門: クラウドストレージにプロジェクトを作らないよう釘を刺した。

--- a/lessons/program/intro/3.md
+++ b/lessons/program/intro/3.md
@@ -79,6 +79,10 @@ NVIC Settingsを選択(③)してチェックを入れます(④)。\
 例えば`/home/foobar/Documents`とした場合`/home/foobar/Documents/(プロジェクト名)`以下に生成され、\
 `C:\Users\foobar\Documents`とした場合`C:\Users\foobar\Documents\(プロジェクト名)`以下に生成されます。
 
+**(↓↓↓↓↓ここ重要↓↓↓↓↓)**\
+**この時、OneDrive・Google Driveなどのクラウドストレージは選ばない方が身のためです。(同期周りでトラブりがち)**\
+**(↑↑↑↑↑ここ重要↑↑↑↑↑)**
+
 プロジェクトの生成場所の設定が終わったので、生成するファイル共の種類を設定(③)します。\
 今回はCMakeを使うので`CMake`に設定します。
 
