feature: 制御講習/ロボット制御入門: Shift_JISへの怨み節を追加。

--- a/lessons/program/intro/3.md
+++ b/lessons/program/intro/3.md
@@ -81,6 +81,7 @@ NVIC Settingsを選択(③)してチェックを入れます(④)。\
 
 **(↓↓↓↓↓ここ重要↓↓↓↓↓)**\
 **この時、OneDrive・Google Driveなどのクラウドストレージは選ばない方が身のためです。(同期周りでトラブりがち)**\
+**あと、OneDriveもそうだけど、特にWindows勢は日本語が含まれるパスには置かないで下さい。(Shift_JISは悪)**\
 **(↑↑↑↑↑ここ重要↑↑↑↑↑)**
 
 プロジェクトの生成場所の設定が終わったので、生成するファイル共の種類を設定(③)します。\
