feature: 制御講習/ロボット制御入門: CLionの初期設定パートを追加。

--- a/lessons/program/intro/3.md
+++ b/lessons/program/intro/3.md
@@ -3,9 +3,9 @@ author: Sora Tonami
 date: 2025/04/23
 description: 実際にプロジェクトを作ってみよう！
 layout: default
-modified: 2025/05/07
-title: プロジェクトを作ってみよう \| ロボット制御入門 \| 制御講習
-title-short: プロジェクトを作ってみよう
+modified: 2025/05/27
+title: プロジェクトを作ってみよう その1 \| ロボット制御入門 \| 制御講習
+title-short: プロジェクトを作ってみよう その1
 ---
 
 前回、無事に環境を作り終わったと思うのでプロジェクトを作りましょう。
@@ -103,7 +103,7 @@ NVIC Settingsを選択(③)してチェックを入れます(④)。\
 ## 次回予告
 
 今回で必要なプロジェクトは無事に作成し終わりました。\
-次回はゴールにはあまり関係はないですが、エアシリンダーを動かします。
+次回はCLionでプロジェクトを開くために必要な初期設定をしていきます。
 
 [次へ](4)
 
