--- a/lessons/program/intro/4.md
+++ b/lessons/program/intro/4.md
@@ -1,21 +1,81 @@
 ---
 author: Sora Tonami
-date: 2025/05/05
-description: まずは手始めにエアシリンダーを動かしてみよう！
+date: 2025/05/27
+description: プロジェクトを触る準備をしよう！
 layout: default
-modified: 2025/05/05
-title: エアシリンダーを動かしてみよう \| ロボット制御入門 \| 制御講習
-title-short: エアシリンダーを動かしてみよう
+modified: 2025/05/27
+title: プロジェクトを作ってみよう その2 \| ロボット制御入門 \| 制御講習
+title-short: プロジェクトを作ってみよう その2
 ---
 
-いよいよ前回作ったプロジェクトで開発していきます。\
-今回はエアシリンダーを動かします。CLionを開いて下さい。
+前回はCubeMXでプロジェクトを生成しました。\
+今回はCLionでプロジェクトを開きつつ、まだやっていないであろうCLionの初期設定共をこなします。
 
-(WIP)
+## プロジェクトOPEN!
+
+まずCLionを開きます。JetBrains Toolbox内からでもスタートからでもデスクトップからでもお好きにドーゾ。\
+初回起動時なんか聞かれた気がしなくもないけど、取り敢えず言語に日本語、地域にアジア(中国以外)、チェックボックス系はとりま全部ONでいいと思います。知らんけど。(TODO)
+
+で、何だかんだ進むとようこそ画面が出ます。大体こういうツールはようこそ画面がある気がする。[要出典]
+
+![CLionのプロジェクトを開く画面]
+
+開く(①)を押すと場所選択させられるので前回作ったプロジェクトが入ってるディレクトリを選択(②)します。\
+**.iocではなく.iocが入ったディレクトリ(かその中のCMakeLists.txt)** を選択して下さい。\
+OK(③)を押せばプロジェクトが読み込まれます。
+
+![CLionのCMakeプロジェクト初回ロード時に出る画面]
+
+ちょい待つとCLionがCMakeプロジェクトだと勝手に認識してくれるので、初回設定画面が出てきます。\
+①はもうON固定でいいです。いくらか楽になります。\
+諸々設定する前にインストールしたARMのツールチェーンをCLionに登録する必要があるので②を押します。
+
+## ツールチェーン追加
+
+![CLionのツールチェーン管理画面、ツールチェーンを追加]
+
+そしたらツールチェーンの管理画面が出てくるので左上の＋(①)から「システム」(②)を押します。
+
+![CLionのツールチェーン管理画面、ツールチェーンを編集]
+
+編集できるようになるので好きな名前にして下さい。(①)\
+この後すぐ使うので覚えといて下さい。
+
+②にはぞれぞれのツールの場所を指定します。環境構築の時に**分かりやすい場所に置いたと思うので**、それぞれ指定して下さい。
+
+ビルドツールは今回Ninja
+Buildを使うのでWindows勢なら`ninja.exe`を、それ以外勢は`ninja`をフルパス(PATH通ってればフルパスじゃなくていいけど)で指定して下さい。\
+Cコンパイラー・C++コンパイラー・デバッガーはArm GNU
+Toolchainのヤツを使うので、コヤツのインストール先にある`arm-none-eabi-gcc`(`.exe`)・`arm-none-eabi-g++`(`.exe`)・`arm-none-eabi-gdb`(`.exe`)をそれぞれ指定して下さい。\
+うまく行ってればC++コンパイラー欄の下には何も出ず、デバッガー欄の下にはデバッガーの(＝コンパイラーの)バージョン情報が出てるはずです。
+
+ツールチェーンの設定が済んだのでOK(③)からCMakeの初期設定に戻りましょう。
+
+## 仕上げ
+
+![CLionのCMakeプロジェクト初回ロード時に出る画面、ツールチェーンを変更]
+
+戻ってきたら、まず①でさっき作ったツールチェーンを選択します。プロファイル名末尾にその名前が自動で追記されます。
+
+これで下準備は完了したのでOK(②)で閉じます。
+
+![CLionのエディタ画面]
+
+プロジェクトのロードで右下にプログレスバーやら通知やらゴチャゴチャ出ます。\
+収まったらロード完了です。何か言ってきたら筆者か[Issue]に殴り込んで下さい。
 
 ## 次回予告
 
-今回はエアシリンダーを動かしました。実は全く同じ方法でLEDも光らせたり出来ます。(ただのON/OFFなため)\
-次回は足回りの肝、モーターを動かします。
+今回はプロジェクトをCLionで開いて、ついでに初期設定まで行いました。\
+これはあくまで初期設定なので、次新しくプロジェクト作るって時はCMake部分の設定だけで済みます。\
+次回はゴールにはあまり関係はないですが、エアシリンダーを動かします。
 
 [次へ](5)
+
+[clionのcmakeプロジェクト初回ロード時に出る画面]: /assets/lessons/program/project-open-2.png
+[clionのcmakeプロジェクト初回ロード時に出る画面、ツールチェーンを変更]: /assets/lessons/program/project-open-5.png
+[clionのエディタ画面]: /assets/lessons/program/project-open-6.png
+[clionのツールチェーン管理画面、ツールチェーンを編集]: /assets/lessons/program/project-open-4.png
+[clionのツールチェーン管理画面、ツールチェーンを追加]: /assets/lessons/program/project-open-3.png
+[clionのプロジェクトを開く画面]: /assets/lessons/program/project-open-1.png
+[issue]: https://github.com/mecha-natori/mecha-natori.github.io/issues
