--- a/lessons/program/intro/7.md
+++ b/lessons/program/intro/7.md
@@ -1,25 +1,21 @@
 ---
 author: Sora Tonami
 date: 2025/05/05
-description: いよいよ集大成、足回りを動かしてみよう！
+description: コントローラーの信号を受信してみよう！
 layout: default
-modified: 2025/05/05
-title: 足回りを動かしてみよう \| ロボット制御入門 \| 制御講習
-title-short: 足回りを動かしてみよう
+modified: 2025/05/27
+title: コントローラーを受信してみよう \| ロボット制御入門 \| 制御講習
+title-short: コントローラーを受信してみよう
 ---
 
-今回は今までの集大成です。いよいよ足回りを動かします。
+今回は、今までのアクチュエーターとは打って変わって通信系です。\
+コントローラーで操作するために信号を受信します。
 
 (WIP)
 
-## おわりに
+## 次回予告
 
-これでロボット制御入門は以上となります。(番外編はあるけど)\
-環境構築の方法からプロジェクトの作り方、GPIOとPWMの使い方にUARTの受信を一通り行いました。\
-もちろん、これで作れるロボットは最低限でしかありません。\
-しかし、GPIOとPWMさえ使えれば、ぶっちゃけ何でも動かせます。ハイ。\
-なので、まぁ、知らん事は適宜ggりつつこの知見を頭の片隅にでも置いといてくれたらワイ幸いの限りでございます。
+今回まででロボットを最低限動かすための知見が溜まったと思います。\
+次回はこれまでの内容を元に、足回りを動かします。
 
-では、良い組み込みライフを。
-
-著:渡波 空
+[次へ](8)
