--- a/lessons/program/intro/5.md
+++ b/lessons/program/intro/5.md
@@ -1,20 +1,21 @@
 ---
 author: Sora Tonami
 date: 2025/05/05
-description: アクチュエーターの金字塔、モーターを回してみよう！
+description: まずは手始めにエアシリンダーを動かしてみよう！
 layout: default
-modified: 2025/05/05
-title: モーターを回してみよう \| ロボット制御入門 \| 制御講習
-title-short: モーターを回してみよう
+modified: 2025/05/27
+title: エアシリンダーを動かしてみよう \| ロボット制御入門 \| 制御講習
+title-short: エアシリンダーを動かしてみよう
 ---
 
-今回は足回りの要となるモーターを動かします。
+いよいよ前回作ったプロジェクトで開発していきます。\
+今回はエアシリンダーを動かします。CLionを開いて下さい。
 
 (WIP)
 
 ## 次回予告
 
-今回は足回りを動かすために必要なモーターを動かしました。\
-次回はアクチュエーターから離れて、コントローラー通信を行います。
+今回はエアシリンダーを動かしました。実は全く同じ方法でLEDも光らせたり出来ます。(ただのON/OFFなため)\
+次回は足回りの肝、モーターを動かします。
 
 [次へ](6)
