--- a/lessons/program/intro/6.md
+++ b/lessons/program/intro/6.md
@@ -1,21 +1,20 @@
 ---
 author: Sora Tonami
 date: 2025/05/05
-description: コントローラーの信号を受信してみよう！
+description: アクチュエーターの金字塔、モーターを回してみよう！
 layout: default
-modified: 2025/05/05
-title: コントローラーを受信してみよう \| ロボット制御入門 \| 制御講習
-title-short: コントローラーを受信してみよう
+modified: 2025/05/27
+title: モーターを回してみよう \| ロボット制御入門 \| 制御講習
+title-short: モーターを回してみよう
 ---
 
-今回は、今までのアクチュエーターとは打って変わって通信系です。\
-コントローラーで操作するために信号を受信します。
+今回は足回りの要となるモーターを動かします。
 
 (WIP)
 
 ## 次回予告
 
-今回まででロボットを最低限動かすための知見が溜まったと思います。\
-次回はこれまでの内容を元に、足回りを動かします。
+今回は足回りを動かすために必要なモーターを動かしました。\
+次回はアクチュエーターから離れて、コントローラー通信を行います。
 
 [次へ](7)
