feature: 制御講習/ロボット制御入門: 前へボタンとTopへ戻るボタンを追加。

--- a/lessons/program/intro/3.md
+++ b/lessons/program/intro/3.md
@@ -3,7 +3,7 @@ author: Sora Tonami
 date: 2025/04/23
 description: 実際にプロジェクトを作ってみよう！
 layout: default
-modified: 2025/05/27
+modified: 2025/05/28
 title: プロジェクトを作ってみよう その1 \| ロボット制御入門 \| 制御講習
 title-short: プロジェクトを作ってみよう その1
 ---
@@ -105,7 +105,9 @@ NVIC Settingsを選択(③)してチェックを入れます(④)。\
 今回で必要なプロジェクトは無事に作成し終わりました。\
 次回はCLionでプロジェクトを開くために必要な初期設定をしていきます。
 
-[次へ](4)
+[前へ(Linux編)](2-linux)・[前へ(Windows編)](2-win)・[次へ](4)
+
+[ロボット制御入門Topへ](..#%E3%83%AD%E3%83%9C%E3%83%83%E3%83%88%E5%88%B6%E5%BE%A1%E5%85%A5%E9%96%80)
 
 [stm32cubemxのクロック設定画面]: /assets/lessons/program/cubemx-edit-2.png
 [stm32cubemxのトップ画面]: /assets/lessons/program/cubemx-top.png
