--- a/lessons/program/intro/1.md
+++ b/lessons/program/intro/1.md
@@ -3,14 +3,14 @@ author: Sora Tonami
 date: 2025/04/23
 description: ロボット制御のための環境を整えよう！
 layout: default
-modified: 2025/05/07
+modified: 2025/05/28
 title: 環境を整えよう その1 \| ロボット制御入門 \| 制御講習
 title-short: 環境を整えよう その1
 ---
 
 ロボットの制御をするためには様々なツールが必要です。\
 今回はまずどのようなツール・アカウントが必要なのか、ざっくり説明します。\
-\*\*実際に導入するのは次回で、\*\*今回は紹介＆垢作成です。
+**実際に導入するのは次回で、** 今回は紹介＆垢作成です。
 
 あ、さっさと環境作りたいから別に説明要らんよって人は先進んでいいよ。
 
@@ -67,8 +67,10 @@ JetBrains CLionを始めとするJetBrains製品を管理するヤツです。\
 今回でツールの概要の説明とアカウント作成が終わりました。\
 次回は実際にこれらのツールをインストールしていきます。自分の環境に合った方のページへ進んでください。
 
-- [Linux編](2-linux)
-- [Windows編](2-win)
+- [Linux編へ](2-linux)
+- [Windows編へ](2-win)
+
+[ロボット制御入門Topへ](..#%E3%83%AD%E3%83%9C%E3%83%83%E3%83%88%E5%88%B6%E5%BE%A1%E5%85%A5%E9%96%80)
 
 [jetbrains公式]: https://www.jetbrains.com/ja-jp/
 [stマイクロエレクトロニクス]: https://www.st.com/content/st_com/ja.html
