--- a/lessons/program/intro/4.md
+++ b/lessons/program/intro/4.md
@@ -3,7 +3,7 @@ author: Sora Tonami
 date: 2025/05/27
 description: プロジェクトを触る準備をしよう！
 layout: default
-modified: 2025/05/27
+modified: 2025/05/28
 title: プロジェクトを作ってみよう その2 \| ロボット制御入門 \| 制御講習
 title-short: プロジェクトを作ってみよう その2
 ---
@@ -70,7 +70,9 @@ Toolchainのヤツを使うので、コヤツのインストール先にある`a
 これはあくまで初期設定なので、次新しくプロジェクト作るって時はCMake部分の設定だけで済みます。\
 次回はゴールにはあまり関係はないですが、エアシリンダーを動かします。
 
-[次へ](5)
+[前へ](3)・[次へ](5)
+
+[ロボット制御入門Topへ](..#%E3%83%AD%E3%83%9C%E3%83%83%E3%83%88%E5%88%B6%E5%BE%A1%E5%85%A5%E9%96%80)
 
 [clionのcmakeプロジェクト初回ロード時に出る画面]: /assets/lessons/program/project-open-2.png
 [clionのcmakeプロジェクト初回ロード時に出る画面、ツールチェーンを変更]: /assets/lessons/program/project-open-5.png
