--- a/lessons/program/intro/5.md
+++ b/lessons/program/intro/5.md
@@ -3,7 +3,7 @@ author: Sora Tonami
 date: 2025/05/05
 description: まずは手始めにエアシリンダーを動かしてみよう！
 layout: default
-modified: 2025/05/27
+modified: 2025/05/28
 title: エアシリンダーを動かしてみよう \| ロボット制御入門 \| 制御講習
 title-short: エアシリンダーを動かしてみよう
 ---
@@ -18,4 +18,6 @@ title-short: エアシリンダーを動かしてみよう
 今回はエアシリンダーを動かしました。実は全く同じ方法でLEDも光らせたり出来ます。(ただのON/OFFなため)\
 次回は足回りの肝、モーターを動かします。
 
-[次へ](6)
+[前へ](4)・[次へ](6)
+
+[ロボット制御入門Topへ](..#%E3%83%AD%E3%83%9C%E3%83%83%E3%83%88%E5%88%B6%E5%BE%A1%E5%85%A5%E9%96%80)
