--- a/lessons/program/intro/6.md
+++ b/lessons/program/intro/6.md
@@ -3,7 +3,7 @@ author: Sora Tonami
 date: 2025/05/05
 description: アクチュエーターの金字塔、モーターを回してみよう！
 layout: default
-modified: 2025/05/27
+modified: 2025/05/28
 title: モーターを回してみよう \| ロボット制御入門 \| 制御講習
 title-short: モーターを回してみよう
 ---
@@ -17,4 +17,6 @@ title-short: モーターを回してみよう
 今回は足回りを動かすために必要なモーターを動かしました。\
 次回はアクチュエーターから離れて、コントローラー通信を行います。
 
-[次へ](7)
+[前へ](5)・[次へ](7)
+
+[ロボット制御入門Topへ](..#%E3%83%AD%E3%83%9C%E3%83%83%E3%83%88%E5%88%B6%E5%BE%A1%E5%85%A5%E9%96%80)
