--- a/lessons/program/intro/7.md
+++ b/lessons/program/intro/7.md
@@ -3,7 +3,7 @@ author: Sora Tonami
 date: 2025/05/05
 description: コントローラーの信号を受信してみよう！
 layout: default
-modified: 2025/05/27
+modified: 2025/05/28
 title: コントローラーを受信してみよう \| ロボット制御入門 \| 制御講習
 title-short: コントローラーを受信してみよう
 ---
@@ -18,4 +18,6 @@ title-short: コントローラーを受信してみよう
 今回まででロボットを最低限動かすための知見が溜まったと思います。\
 次回はこれまでの内容を元に、足回りを動かします。
 
-[次へ](8)
+[前へ](6)・[次へ](8)
+
+[ロボット制御入門Topへ](..#%E3%83%AD%E3%83%9C%E3%83%83%E3%83%88%E5%88%B6%E5%BE%A1%E5%85%A5%E9%96%80)
