--- a/lessons/program/intro/8.md
+++ b/lessons/program/intro/8.md
@@ -3,7 +3,7 @@ author: Sora Tonami
 date: 2025/05/05
 description: いよいよ集大成、足回りを動かしてみよう！
 layout: default
-modified: 2025/05/05
+modified: 2025/05/28
 title: 足回りを動かしてみよう \| ロボット制御入門 \| 制御講習
 title-short: 足回りを動かしてみよう
 ---
@@ -23,3 +23,7 @@ title-short: 足回りを動かしてみよう
 では、良い組み込みライフを。
 
 著:渡波 空
+
+[前へ](7)
+
+[ロボット制御入門Topへ](..#%E3%83%AD%E3%83%9C%E3%83%83%E3%83%88%E5%88%B6%E5%BE%A1%E5%85%A5%E9%96%80)
