feature: 制御講習/ロボット制御入門: OpenOCD設定を追記。

--- a/lessons/program/intro/4.md
+++ b/lessons/program/intro/4.md
@@ -59,15 +59,33 @@ Toolchainのヤツを使うので、コヤツのインストール先にある`a
 
 これで下準備は完了したのでOK(②)で閉じます。
 
-![CLionのエディタ画面]
+## OpenOCD
 
-プロジェクトのロードで右下にプログレスバーやら通知やらゴチャゴチャ出ます。\
-収まったらロード完了です。何か言ってきたら筆者か[Issue]に殴り込んで下さい。
+さて、初期設定を済ませたいのでもうひと頑張りします。\
+基板に実行ファイル書き込むためのソフトであるOpenOCDの場所をCLionに教えてやらねばなりません。
+
+![CLionのエディタ画面、設定を開く]
+
+設定は右上の歯車(①)を押して出てくるメニューにいます。「設定」(②)を押します。
+
+![CLionの設定画面、組み込み開発設定]
+
+CLionの設定はいくつかのカテゴリに分かれています。\
+目的の場所は「ビルド、実行、デプロイ」(①)の中の「組み込み開発」(②)にあります。
+
+各種ツールの場所を指定する欄が現れるのでOpenOCDの実行ファイルの場所を③にぶち込みます。Windowsなら`openocd.exe`、それ以外なら`openocd`の場所ですね。
+
+すぐ下にCubeMXの場所を指定する欄(④)もあります。空欄にしといてもいいですが、ここで指定しておくとCLion上で`.ioc`を開くとCubeMXが立ち上がってくれるようになります。
+
+終わったら⑤で閉じて下さい。これで多分全部済みました。
 
 ## 次回予告
 
 今回はプロジェクトをCLionで開いて、ついでに初期設定まで行いました。\
-これはあくまで初期設定なので、次新しくプロジェクト作るって時はCMake部分の設定だけで済みます。\
+これはあくまで初期設定なので、次新しくプロジェクト作るって時はCMake部分の設定だけで済みます。
+
+あと、設定は項目がいっぱいあるので自分好みにカスタマイズしとくと捗ります。
+
 次回はゴールにはあまり関係はないですが、エアシリンダーを動かします。
 
 [前へ](3)・[次へ](5)
@@ -76,8 +94,8 @@ Toolchainのヤツを使うので、コヤツのインストール先にある`a
 
 [clionのcmakeプロジェクト初回ロード時に出る画面]: /assets/lessons/program/project-open-2.png
 [clionのcmakeプロジェクト初回ロード時に出る画面、ツールチェーンを変更]: /assets/lessons/program/project-open-5.png
-[clionのエディタ画面]: /assets/lessons/program/project-open-6.png
+[clionのエディタ画面、設定を開く]: /assets/lessons/program/project-open-6.png
 [clionのツールチェーン管理画面、ツールチェーンを編集]: /assets/lessons/program/project-open-4.png
 [clionのツールチェーン管理画面、ツールチェーンを追加]: /assets/lessons/program/project-open-3.png
 [clionのプロジェクトを開く画面]: /assets/lessons/program/project-open-1.png
-[issue]: https://github.com/mecha-natori/mecha-natori.github.io/issues
+[clionの設定画面、組み込み開発設定]: /assets/lessons/program/project-open-7.png
