feature: 制御講習/ロボット制御入門: 構成関連設定を追記。

--- a/lessons/program/intro/4.md
+++ b/lessons/program/intro/4.md
@@ -77,7 +77,42 @@ CLionの設定はいくつかのカテゴリに分かれています。\
 
 すぐ下にCubeMXの場所を指定する欄(④)もあります。空欄にしといてもいいですが、ここで指定しておくとCLion上で`.ioc`を開くとCubeMXが立ち上がってくれるようになります。
 
-終わったら⑤で閉じて下さい。これで多分全部済みました。
+終わったら⑤で閉じて下さい。
+
+## 書き込み設定
+
+更にもうひと頑張り、OpenOCDに関連して書き込むための設定をやって行きます。
+
+![CLionのエディタ画面、構成を削除し編集画面を開く]
+
+上の方にある「(プロジェクト名)」が書いてある欄(①)をクリックします。これは横の実行ボタンで何をするか選択するトコです。\
+今回はPC上で実行するわけではないので、あらかじめ用意されているものは要らないので削除します。\
+横の三点リーダー(②)を押すとメニューが出てくるので「削除」(③)を押します。これをもう一つにもやった後、④で編集画面に行きます。
+
+![CLionの構成編集画面、構成を追加]
+
+構成の編集画面が出てくるので左上の＋(①)を押して「OpenOCDをダウンロードして実行」(②)を選びます。
+
+![CLionの構成編集画面、構成を編集]
+
+流石に名称未設定は可哀想な気がするのでテキトーな名前を付けて(①)やります。\
+②のチェックは後々チームで開発する時、設定を共有出来るのでONでいいと思います。\
+③は実際に書き込む実行ファイルを選択します。クリックするとプロジェクト名と同じ名前があるはずなので選択します。
+
+ここまでは全ボード共通です。何故なら、次に指定するボード構成ファイルがボードごとの違いを吸収してくれるためです。\
+というわけで指定していくのですが、なんと有り難いことにCLionがOpenOCDの場所を元にボード構成ファイルをリストアップして選びやすくしてくれます。「支援⋯」(④)を押します。
+
+![CLionの構成編集画面、ボード構成ファイルを選択]
+
+選びやすく、と言ってもあくまで列挙するだけなので大量の中から目的のものを探す必要があります。\
+我々が使ってるのはSTM32なので大体`st_`始まりか`stm32`始まりで目星を付けると見つかります。
+
+今回はNUCLEO-F446REなので`st_nucleo_f4.cfg`を使います。\
+**この時、左の「使用」ではなく、真ん中の「プロジェクトにコピーして使用」(②)を押して下さい。**\
+自分だけで開発するなら影響はないんですが、チーム開発だとOpenOCDの場所に左右される関係で人によっては動かない、という事態になりかねません。
+
+押すとウィンドウが閉じて無事にボード構成ファイルが選択されてるはずなので、構成編集画面を閉じます。(OK押すなりなんなりお好きに)\
+これで下準備は完了です。
 
 ## 次回予告
 
@@ -94,8 +129,12 @@ CLionの設定はいくつかのカテゴリに分かれています。\
 
 [clionのcmakeプロジェクト初回ロード時に出る画面]: /assets/lessons/program/project-open-2.png
 [clionのcmakeプロジェクト初回ロード時に出る画面、ツールチェーンを変更]: /assets/lessons/program/project-open-5.png
+[clionのエディタ画面、構成を削除し編集画面を開く]: /assets/lessons/program/project-open-8.png
 [clionのエディタ画面、設定を開く]: /assets/lessons/program/project-open-6.png
 [clionのツールチェーン管理画面、ツールチェーンを編集]: /assets/lessons/program/project-open-4.png
 [clionのツールチェーン管理画面、ツールチェーンを追加]: /assets/lessons/program/project-open-3.png
 [clionのプロジェクトを開く画面]: /assets/lessons/program/project-open-1.png
+[clionの構成編集画面、ボード構成ファイルを選択]: /assets/lessons/program/project-open-11.png
+[clionの構成編集画面、構成を編集]: /assets/lessons/program/project-open-10.png
+[clionの構成編集画面、構成を追加]: /assets/lessons/program/project-open-9.png
 [clionの設定画面、組み込み開発設定]: /assets/lessons/program/project-open-7.png
