feature: 制御講習/ロボット制御入門: ファイル構造の説明とC++使用準備だけ取り敢えず追加。

--- a/lessons/program/intro/5.md
+++ b/lessons/program/intro/5.md
@@ -3,13 +3,90 @@ author: Sora Tonami
 date: 2025/05/05
 description: まずは手始めにエアシリンダーを動かしてみよう！
 layout: default
-modified: 2025/05/28
+modified: 2025/05/30
 title: エアシリンダーを動かしてみよう \| ロボット制御入門 \| 制御講習
 title-short: エアシリンダーを動かしてみよう
 ---
 
-いよいよ前回作ったプロジェクトで開発していきます。\
-今回はエアシリンダーを動かします。CLionを開いて下さい。
+いよいよ前回までで作ったプロジェクトで開発していきます。\
+今回はエアシリンダーを動かします。
+
+## ファイル構造について
+
+...とその前に、これから開発していく上でどこに何があるか知っておくと便利です。\
+ファイル構造について軽く書いておきます。
+
+![ファイル構造]
+
+赤で囲った部分はCMake関連のファイルです。ライブラリを追加する時には触るかもしれませんが、基本こっちから触ることはありません。\
+水色で囲った部分はマイコンがプログラムを起動するために必要なヤツです。これも放置。
+
+重要なのはここからで、黄色・緑で囲った部分(特に後者)を主に触っていきます。
+
+黄色の方、`Inc`はヘッダーファイルを入れておきます。(`Include`の略だろうけど一般的には`include`が使われるので何故`Inc`なのか謎)\
+緑の方、`Src`はソースファイルを入れておきます。(`Source code`の略なんだけど一般的には小文字スタートの`src`が使われるのでなんとも)
+
+ヘッダー・ソースの違いは[コラム:ヘッダーとソースの違い]を参照。
+
+その他にもCubeMXでやった設定内容が入ったIOCファイル、ライブラリが入った`Drivers`ディレクトリがありますが、触ることはありません。
+
+## C++を使う準備
+
+もう一つ、CubeMXは現状C言語のコードしか吐いてくれないので、C++で開発するにはちょっと細工してやる必要があります。
+
+細工と言っても簡単な話で、C++で書いた関数をCubeMXが吐いたC言語側で呼べばいいのです。早速書いていきます。
+
+![main.hに関数プロトタイプを追加]
+
+まずヘッダーに関数の定義を書きます。`main.c`から呼び出すんで`main.h`(①)が都合良さそうですね。
+
+中には100行弱書いてますが、その中から赤で囲った「USER CODE BEGIN(END) EFP」(②)を探して下さい。\
+今回はこの中に書いていきます。どうせなら見慣れた名前が良かろうということで関数名は*某duino*にあやかって`setup`と`loop`としました。
+
+![main.cに関数呼び出しを追加]
+
+先に呼び出しだけ書いちゃいます。`main.c`(①)を開いて下さい。
+
+例によってその中から「USER CODE BEGIN(END) 2」(②)・「USER CODE BEGIN(END) 3」(③)を探します。\
+前者では`setup`を、後者では`loop`を呼び出しておきます。
+
+![ソースファイル作成画面を開く]
+
+次に我々がこれからメインで触っていくことになるC++のソースを作ります。\
+まず`Src`の上で右クリック(①)して下さい。メニューが表示されるので、「新規」(②)から「C/C++ ソースファイル」(③)を押します。
+
+![C++ソースファイルを作成]
+
+作成画面が出てくるので名前を決め(①)ます。今回は`cxxmain`としました。\
+型(②)はソースファイルの言語です。C++なので`.cpp`(画像では筆者の好みの関係で`.cc`)を選びます。`.c`はC言語、`.cu`はCUDAのソースになってしまいます。
+
+このままではCMakeの対象に入らないので、「ターゲットに追加」(③)にチェックを入れます。\
+多分デフォでプロジェクト名と同名のヤツにもチェックが入ってくれてるはずなのでそのまま。他はもちろんチェック無し。
+
+OK(④)で完了するとファイルが作成され、自動で開きます。ここにコードを書いていきます。
+
+```cc
+#include <main.h>
+
+extern "C" {
+
+void setup() {
+    // 準備
+}
+
+void loop() {
+    // ループ処理
+}
+
+} // extern "C"
+```
+
+`extern "C"`がミソで、コイツを付けることでC言語からも使えるようにします。\
+他は某duinoよろしく最初に1回だけ実行する部分とループ処理の2つを定義してます。
+
+ようやく準備が出来ました。閑話休題。
+
+## エアシリンダーを動かそう！
 
 (WIP)
 
@@ -21,3 +98,10 @@ title-short: エアシリンダーを動かしてみよう
 [前へ](4)・[次へ](6)
 
 [ロボット制御入門Topへ](..#%E3%83%AD%E3%83%9C%E3%83%83%E3%83%88%E5%88%B6%E5%BE%A1%E5%85%A5%E9%96%80)
+
+[c++ソースファイルを作成]: /assets/lessons/program/cpp-from-c-4.png
+[main.cに関数呼び出しを追加]: /assets/lessons/program/cpp-from-c-2.png
+[main.hに関数プロトタイプを追加]: /assets/lessons/program/cpp-from-c-1.png
+[コラム:ヘッダーとソースの違い]: column-difference-headers-and-sources
+[ソースファイル作成画面を開く]: /assets/lessons/program/cpp-from-c-3.png
+[ファイル構造]: /assets/lessons/program/file-structure.png
