feature: 制御講習/ロボット制御入門: 足回り用PWMの設定を追加

--- a/lessons/program/intro/3.md
+++ b/lessons/program/intro/3.md
@@ -3,7 +3,7 @@ author: Sora Tonami
 date: 2025/04/23
 description: 実際にプロジェクトを作ってみよう！
 layout: default
-modified: 2025/05/28
+modified: 2025/07/04
 title: プロジェクトを作ってみよう その1 \| ロボット制御入門 \| 制御講習
 title-short: プロジェクトを作ってみよう その1
 ---
@@ -46,15 +46,28 @@ title-short: プロジェクトを作ってみよう その1
 
 まず機能一覧をA to Zにして(①)、TIM3を選択(②)します。
 
-![STM32CubeMXのピン設定画面、タイマー3のチャンネル3のPWM設定]
+![STM32CubeMXのピン設定画面、タイマー3のPWM設定]
 
 TIM3、タイマー3の設定が開きます。\
 タイマーは、一定間隔で処理したりn回入力された時に処理したりするための機能です。
 
-赤で囲ったチャンネル3の設定を変更(①)します。\
-`PWM Generation CH3`を選びます。`Output Compare 〜`や`PWM Generation No Output`ではないので注意。
+赤で囲ったチャンネル1・3・4の設定を変更(①)します。\
+`PWM Generation CH*`を選びます。`Output Compare 〜`や`PWM Generation No Output`ではないので注意。
 
-変更したら右のピンのPB0に割り当てられますが、今回はPC8に割り当てたいのでCtrlキーを押しながらD&Dして(②)下さい。
+変更したら右のピンのPA6・PB0・PB1に割り当てられますが、今回はそれぞれPC6・PC8・PC9に割り当てたいのでCtrlキーを押しながらD&Dして(②)下さい。
+
+次に、TIM2を選択(③)します。
+
+![STM32CubeMXのピン設定画面、タイマー2のPWM設定]
+
+TIM2、タイマー2の設定が開きます。
+
+赤で囲ったチャンネル1の設定を変更(①)します。\
+こちらも`PWM Generation CH1`を選びます。他のを選ばないよう注意。
+
+変更したら右のピンのPA0に割り当てられますが、例によってPB8に割り当てたいのでCtrlキーを押しながらD&Dして(②)下さい。
+
+また、そのままでは信号が1/65536になってしまうため最大値を65535へ設定(③)します。
 
 ![STM32CubeMXのピン設定画面、USART3の設定]
 
@@ -113,7 +126,8 @@ NVIC Settingsを選択(③)してチェックを入れます(④)。\
 [stm32cubemxのトップ画面]: /assets/lessons/program/cubemx-top.png
 [stm32cubemxのピン設定画面、a to zへ変更]: /assets/lessons/program/cubemx-edit-3.png
 [stm32cubemxのピン設定画面、usart3の設定]: /assets/lessons/program/cubemx-edit-5.png
-[stm32cubemxのピン設定画面、タイマー3のチャンネル3のpwm設定]: /assets/lessons/program/cubemx-edit-4.png
+[stm32cubemxのピン設定画面、タイマー2のpwm設定]: /assets/lessons/program/cubemx-edit-4.1.png
+[stm32cubemxのピン設定画面、タイマー3のpwm設定]: /assets/lessons/program/cubemx-edit-4.png
 [stm32cubemxのピン設定画面、初期状態]: /assets/lessons/program/cubemx-edit-1.png
 [stm32cubemxのプロジェクト作成画面、nucleo-f446reを選択している状態]: /assets/lessons/program/cubemx-create-2.png
 [stm32cubemxのプロジェクト作成画面、初期状態]: /assets/lessons/program/cubemx-create-1.png
