feature: 制御講習/ロボット制御入門: エアシリンダー編、完！

--- a/lessons/program/intro/5.md
+++ b/lessons/program/intro/5.md
@@ -3,7 +3,7 @@ author: Sora Tonami
 date: 2025/05/05
 description: まずは手始めにエアシリンダーを動かしてみよう！
 layout: default
-modified: 2025/05/30
+modified: 2025/07/05
 title: エアシリンダーを動かしてみよう \| ロボット制御入門 \| 制御講習
 title-short: エアシリンダーを動かしてみよう
 ---
@@ -84,15 +84,110 @@ void loop() {
 `extern "C"`がミソで、コイツを付けることでC言語からも使えるようにします。\
 他は某duinoよろしく最初に1回だけ実行する部分とループ処理の2つを定義してます。
 
-ようやく準備が出来ました。閑話休題。
+あと、この後の説明が色々めんどくなりそーなので以降このファイル`cxxmain.cc`って呼ぶんで各自読み替えてね。(投げやり)
+
+閑話休題。
 
 ## エアシリンダーを動かそう！
 
-(WIP)
+いよいよ本題のエアシリンダーです。
+
+![エアシリンダーと電磁弁の大まかな動作の流れ]
+
+エアシリンダー(図中央)は電磁弁(図左・右)によって制御されます。\
+電磁弁は赤で示した弁を電気で動かす事で、タンクの圧縮空気を送ったり、外に向かって開放したりします。\
+制御は単純で、信号のON/OFFで弁を切り替えます。ダントツで一番楽です。
+
+STM32のHAL環境においてGPIOから出力する時は`HAL_GPIO_WritePin`か`HAL_GPIO_TogglePin`を使います。\
+`Write`というのは、信号のON/OFFを「ONという状態をピンに書き込む」「OFFという状態をピンに書き込む」と捉えているんですね。\
+一方`Toggle`は読んで字の如くON/OFFを切り替えます。
+
+引数は両者とも2つ目までは共通で「どのピンに出力するか」をまず渡してやります。\
+`Write`の方だけONなのかOFFなのかを渡してやります。`Toggle`は中に持ってるんで要らんという事です。
+
+例としてはこう。
+
+```cpp
+HAL_GPIO_WritePin(GPIOA, GPIO_PIN_5, GPIO_PIN_SET);   // PA5(GPIOAの5番ピン)にSET(ON)
+HAL_GPIO_WritePin(GPIOA, GPIO_PIN_5, GPIO_PIN_RESET); // PA5(同上)にRESET(OFF)
+//                GPIO?  GPIO_PIN_?  GPIO_PIN_(RE)SET
+HAL_GPIO_TogglePin(GPIOA, GPIO_PIN_5);                // PA5(同上)をON/OFF切り替え
+```
+
+ON/OFFとはそのまま書かずそれぞれSET/RESETと言ってますね。\
+これは内部的には「ONであるか」というフラグで見ているので、そこに1をセットすんのか(0で)リセットすんのか、という風に捉えてるわけですね。
+
+ちなみに、CubeMXでピンに名前を付けることができますが、例えば今回のは何もしてなければ「LD2」と言うピンがあるはずなのでこれを例に取ると、
+
+```cpp
+HAL_GPIO_WritePin(LD2_GPIO_Port, LD2_Pin, GPIO_PIN_SET);
+//                ???_GPIO_Port  ???_Pin
+```
+
+のように書けます。便利。\
+なおこのピンはNUCLEO-F446REの基板表面のLEDに繋がっていてデフォルトで出力モードとなってます。折角なのでコレ使います。
+
+お手元の`cxxmain.cc`を開いて下さい。そんで、`loop`の中にカーソルを移動して頂戴。
+
+```cpp
+// (略)
+
+void loop() {
+    // ループ処理
+    // ＞＞＞＞＞ こ↑こ↓ ＜＜＜＜＜
+}
+
+// (略)
+```
+
+で、ここにON/OFFのコードをぶち込めばON/OFFしてくれるわけです。\
+が、このままだともれなく秒間1億回弱ぐらいの速度でON/OFFされちゃいます。これでは、いけませんね。\
+なので、ちゃんと待ってあげましょう。
+
+STM32のHAL環境において待ってあげる時は`HAL_Delay`を使ってやります。
+
+```cpp
+HAL_Delay(1000);
+//            ms
+```
+
+この例は1秒待ちます。組み込み開発では大体時間の基本単位がミリ秒な気がします。まぁ丁度いいし妥当。<sup>[要出典]</sup>
+
+まぁ1秒でも良いんですが0.5秒の方が~~絵面が面白い~~なんとなく分かりやすそう<sup>[要検証]</sup>なので0.5秒でやります。\
+要するに500ミリ秒ですね。
+
+なので`loop`の中身は、
+
+```cpp
+HAL_GPIO_TogglePin(LD2_GPIO_Port, LD2_Pin);
+HAL_Delay(500);
+```
+
+といった所でしょうかね。ON/OFFを明示的に行うなら、
+
+```cpp
+HAL_GPIO_WritePin(LD2_GPIO_Port, LD2_Pin, GPIO_PIN_RESET);
+HAL_Delay(500);
+HAL_GPIO_WritePin(LD2_GPIO_Port, LD2_Pin, GPIO_PIN_SET);
+HAL_Delay(500);
+```
+
+みたいに書けばよき。
+
+## 基板にぶち込んでみよう！
+
+プログラム出来たんで基板にぶち込みませう。
+
+(TODO:実行ボタン押してる画像)
+
+上にある実行ボタン(多分①とかになるはず)を押すと勝手にビルドした後、\
+OpenOCDが起動して書き込みまでやってくれます。楽。
+
+これだけ。
 
 ## 次回予告
 
-今回はエアシリンダーを動かしました。実は全く同じ方法でLEDも光らせたり出来ます。(ただのON/OFFなため)\
+今回はエアシリンダーを動かしました。ただのON/OFFという所で気付いたかもしれませんが、実は全く同じ方法でLEDも光らせたり出来ます。\
 次回は足回りの肝、モーターを動かします。
 
 [前へ](4)・[次へ](6)
@@ -102,6 +197,7 @@ void loop() {
 [c++ソースファイルを作成]: /assets/lessons/program/cpp-from-c-4.png
 [main.cに関数呼び出しを追加]: /assets/lessons/program/cpp-from-c-2.png
 [main.hに関数プロトタイプを追加]: /assets/lessons/program/cpp-from-c-1.png
+[エアシリンダーと電磁弁の大まかな動作の流れ]: /assets/lessons/program/air-cylinder.png
 [コラム:ヘッダーとソースの違い]: column-difference-headers-and-sources
 [ソースファイル作成画面を開く]: /assets/lessons/program/cpp-from-c-3.png
 [ファイル構造]: /assets/lessons/program/file-structure.png
