feature: C言語で書くよう変更。C++で書くための設定手順をコラムとして分離。

--- a/lessons/program/intro/5.md
+++ b/lessons/program/intro/5.md
@@ -3,7 +3,7 @@ author: Sora Tonami
 date: 2025/05/05
 description: まずは手始めにエアシリンダーを動かしてみよう！
 layout: default
-modified: 2025/07/05
+modified: 2025/09/01
 title: エアシリンダーを動かしてみよう \| ロボット制御入門 \| 制御講習
 title-short: エアシリンダーを動かしてみよう
 ---
@@ -30,64 +30,6 @@ title-short: エアシリンダーを動かしてみよう
 
 その他にもCubeMXでやった設定内容が入ったIOCファイル、ライブラリが入った`Drivers`ディレクトリがありますが、触ることはありません。
 
-## C++を使う準備
-
-もう一つ、CubeMXは現状C言語のコードしか吐いてくれないので、C++で開発するにはちょっと細工してやる必要があります。
-
-細工と言っても簡単な話で、C++で書いた関数をCubeMXが吐いたC言語側で呼べばいいのです。早速書いていきます。
-
-![main.hに関数プロトタイプを追加]
-
-まずヘッダーに関数の定義を書きます。`main.c`から呼び出すんで`main.h`(①)が都合良さそうですね。
-
-中には100行弱書いてますが、その中から赤で囲った「USER CODE BEGIN(END) EFP」(②)を探して下さい。\
-今回はこの中に書いていきます。どうせなら見慣れた名前が良かろうということで関数名は*某duino*にあやかって`setup`と`loop`としました。
-
-![main.cに関数呼び出しを追加]
-
-先に呼び出しだけ書いちゃいます。`main.c`(①)を開いて下さい。
-
-例によってその中から「USER CODE BEGIN(END) 2」(②)・「USER CODE BEGIN(END) 3」(③)を探します。\
-前者では`setup`を、後者では`loop`を呼び出しておきます。
-
-![ソースファイル作成画面を開く]
-
-次に我々がこれからメインで触っていくことになるC++のソースを作ります。\
-まず`Src`の上で右クリック(①)して下さい。メニューが表示されるので、「新規」(②)から「C/C++ ソースファイル」(③)を押します。
-
-![C++ソースファイルを作成]
-
-作成画面が出てくるので名前を決め(①)ます。今回は`cxxmain`としました。\
-型(②)はソースファイルの言語です。C++なので`.cpp`(画像では筆者の好みの関係で`.cc`)を選びます。`.c`はC言語、`.cu`はCUDAのソースになってしまいます。
-
-このままではCMakeの対象に入らないので、「ターゲットに追加」(③)にチェックを入れます。\
-多分デフォでプロジェクト名と同名のヤツにもチェックが入ってくれてるはずなのでそのまま。他はもちろんチェック無し。
-
-OK(④)で完了するとファイルが作成され、自動で開きます。ここにコードを書いていきます。
-
-```cpp
-#include <main.h>
-
-extern "C" {
-
-void setup() {
-    // 準備
-}
-
-void loop() {
-    // ループ処理
-}
-
-} // extern "C"
-```
-
-`extern "C"`がミソで、コイツを付けることでC言語からも使えるようにします。\
-他は某duinoよろしく最初に1回だけ実行する部分とループ処理の2つを定義してます。
-
-あと、この後の説明が色々めんどくなりそーなので以降このファイル`cxxmain.cc`って呼ぶんで各自読み替えてね。(投げやり)
-
-閑話休題。
-
 ## エアシリンダーを動かそう！
 
 いよいよ本題のエアシリンダーです。
@@ -107,7 +49,7 @@ STM32のHAL環境においてGPIOから出力する時は`HAL_GPIO_WritePin`か`
 
 例としてはこう。
 
-```cpp
+```c
 HAL_GPIO_WritePin(GPIOA, GPIO_PIN_5, GPIO_PIN_SET);   // PA5(GPIOAの5番ピン)にSET(ON)
 HAL_GPIO_WritePin(GPIOA, GPIO_PIN_5, GPIO_PIN_RESET); // PA5(同上)にRESET(OFF)
 //                GPIO?  GPIO_PIN_?  GPIO_PIN_(RE)SET
@@ -119,7 +61,7 @@ ON/OFFとはそのまま書かずそれぞれSET/RESETと言ってますね。\
 
 ちなみに、CubeMXでピンに名前を付けることができますが、例えば今回のは何もしてなければ「LD2」と言うピンがあるはずなのでこれを例に取ると、
 
-```cpp
+```c
 HAL_GPIO_WritePin(LD2_GPIO_Port, LD2_Pin, GPIO_PIN_SET);
 //                ???_GPIO_Port  ???_Pin
 ```
@@ -127,14 +69,21 @@ HAL_GPIO_WritePin(LD2_GPIO_Port, LD2_Pin, GPIO_PIN_SET);
 のように書けます。便利。\
 なおこのピンはNUCLEO-F446REの基板表面のLEDに繋がっていてデフォルトで出力モードとなってます。折角なのでコレ使います。
 
-お手元の`cxxmain.cc`を開いて下さい。そんで、`loop`の中にカーソルを移動して頂戴。
+お手元の`main.c`を開いて下さい。そんで、`/* USER CODE BEGIN 3 */`の下にカーソルを移動して頂戴。\
+(めんｄので以降は`/* USER CODE BEGIN なんとか */`と`/* USER CODE END なんとか */`の間は`USER CODE なんとか`って呼ぶっす)
 
-```cpp
-// (略)
+```c
+  // (略)
 
-void loop() {
-    // ループ処理
+  /* Infinite loop */
+  /* USER CODE BEGIN WHILE */
+  while(1) {
+    /* USER CODE END WHILE */
+
+    /* USER CODE BEGIN 3 */
     // ＞＞＞＞＞ こ↑こ↓ ＜＜＜＜＜
+  }
+  /* USER CODE END 3 */
 }
 
 // (略)
@@ -146,7 +95,7 @@ void loop() {
 
 STM32のHAL環境において待ってあげる時は`HAL_Delay`を使ってやります。
 
-```cpp
+```c
 HAL_Delay(1000);
 //            ms
 ```
@@ -156,16 +105,16 @@ HAL_Delay(1000);
 まぁ1秒でも良いんですが0.5秒の方が~~絵面が面白い~~なんとなく分かりやすそう<sup>[要検証]</sup>なので0.5秒でやります。\
 要するに500ミリ秒ですね。
 
-なので`loop`の中身は、
+なので`USER CODE 3`の中身は、
 
-```cpp
+```c
 HAL_GPIO_TogglePin(LD2_GPIO_Port, LD2_Pin);
 HAL_Delay(500);
 ```
 
 といった所でしょうかね。ON/OFFを明示的に行うなら、
 
-```cpp
+```c
 HAL_GPIO_WritePin(LD2_GPIO_Port, LD2_Pin, GPIO_PIN_RESET);
 HAL_Delay(500);
 HAL_GPIO_WritePin(LD2_GPIO_Port, LD2_Pin, GPIO_PIN_SET);
@@ -194,10 +143,6 @@ OpenOCDが起動して書き込みまでやってくれます。楽。
 
 [ロボット制御入門Topへ](..#%E3%83%AD%E3%83%9C%E3%83%83%E3%83%88%E5%88%B6%E5%BE%A1%E5%85%A5%E9%96%80)
 
-[c++ソースファイルを作成]: /assets/lessons/program/cpp-from-c-4.png
-[main.cに関数呼び出しを追加]: /assets/lessons/program/cpp-from-c-2.png
-[main.hに関数プロトタイプを追加]: /assets/lessons/program/cpp-from-c-1.png
 [エアシリンダーと電磁弁の大まかな動作の流れ]: /assets/lessons/program/air-cylinder.png
 [コラム:ヘッダーとソースの違い]: column-difference-headers-and-sources
-[ソースファイル作成画面を開く]: /assets/lessons/program/cpp-from-c-3.png
 [ファイル構造]: /assets/lessons/program/file-structure.png
