feature: 制御講習/ロボット制御入門: コントローラー受信編を途中まで書いた

--- a/lessons/program/intro/7.md
+++ b/lessons/program/intro/7.md
@@ -3,7 +3,7 @@ author: Sora Tonami
 date: 2025/05/05
 description: コントローラーの信号を受信してみよう！
 layout: default
-modified: 2025/05/28
+modified: 2025/09/18
 title: コントローラーを受信してみよう \| ロボット制御入門 \| 制御講習
 title-short: コントローラーを受信してみよう
 ---
@@ -11,7 +11,130 @@ title-short: コントローラーを受信してみよう
 今回は、今までのアクチュエーターとは打って変わって通信系です。\
 コントローラーで操作するために信号を受信します。
 
-(WIP)
+わが部では現在、コントローラー通信にはESP32-DevKitC-32Eを使用しており、これに下駄基板の[Everyday Shumai Party!]を履かせています。\
+ファームウェアとして[ESP32-DS4]を書き込んだ状態でロボットに設置し、UART1の端子から制御用基板に接続します。
+
+制御用基板側では[ESP32-DS4-driver]を使うことでデータを扱いやすくしてます。
+
+~(ちなみに次のシーズンからこれまた拙作の別の通信系統に置き換わる予定なんだけどとりあえず一旦置いとく)~
+
+ほいじゃ、概要はこのぐらいにして実際に配線しようか。
+
+## 配線上のアリア
+
+今回は`PC10`と`PC11`を通信用に割り当てています。...なーんて言われても分かりづらさこの上ないと思うので画像を持ってきました。
+
+![UARTピンの場所]
+
+赤で囲ったところです。丁度隣り合ってたのでありがた〜く使わせてもらいました。見ての通り青いボタンに最も近い列ですね。\
+ここにEveryday Shumai Party!を繋げます。
+
+![UARTコネクターのピンアサイン]
+
+Everyday Shumai Party!のUART1端子から伸ばしてきたDF1Bコネクタ(4ピン)をNUCLEO-F446REに繋げるんですが、\
+その前にピンアサイン確認しときましょう。
+
+画像の向きにDF1Bコネクターを向けた時、右2つは電源供給(5V)用となっています。コイツのおかげで別電源が要らないんですね。\
+一方左側は本命のUART通信線となってます。\
+緑で示した真ん中寄りの方はEveryday Shumai Party!のRXと外部基板のTXを繋ぐ線となっていて、\
+反対にシアンで示した外寄りの方はEveryday Shumai Party!のTXと外部基板のRXを繋ぐ線となっています。
+
+なのでこの画像のコネクタ線の場合、灰色を+5Vに、白色をGNDに、ピンク色を`PC10`に、水色を`PC11`にそれぞれ挿せばいいわけです。
+
+線を経由せず直接ピンからジャンパーワイヤーで配線する場合、TX同士やRX同士を繋がないようにしましょう。たまにやりがち。
+
+ちなみに、今回はESP32とSTM32との通信なので大丈夫ですが、**特にArduino UNOなど**を使う場合には注意が必要です。\
+というのも、**UARTの信号の電圧が違う**のです。(ﾊｧ?)\
+ESP32とSTM32は、というか基本的には信号は3.3Vなのですが、\
+**どういうわけか**Arduino UNOはUART信号に　5　V　を　使　い　や　が　る　のです。\
+この場合、別途電圧変換基板を噛ます必要があるのでご注意を...(n敗)\
+~(てかArduino UNOぐらいしか5VのUART見ない希ガス)~
+
+## 毎日焼売パーティ！32日目
+
+で、コントローラーの信号を受け取るために、まず先述の通りESP32-DevKitC-32Eにファームウェア([ESP32-DS4])を書き込みます。\
+これはPlatformIOプロジェクトです。まずサクッとPlatformIOをインスコしちゃいましょう。(もちろんもう持ってるんなら飛ばして諸手)
+
+公式を参照...してもらいたい所さんですが公式サイトそのまま進むともれなくVSCode向け拡張機能を入れさせられるのでここで解説します。\
+まず[`get-platformio.py`]を落とします。見ての通りインストール用のPythonスクリプトですね。
+
+落としたらこれをPythonで実行します。...って言うだけだと詰まる事が多いので手順を。
+
+まずテキトーにCLI開きます。DOS窓(`cmd.exe`)でもPowerShellでも`bash`でも何でもいいんですけど、Pythonが使える事が大事です。\
+例えば、インストーラーでPATHを通すチェックを入れずにインスコしたAnaconda環境でPython使ってるんであれば`Anaconda Prompt`とかね。\
+不安なら`python -V`とか`python3 -V`とか実行してバージョン番号がちゃんと返ってくれば無問題。\
+「Pythonねぇぞｺﾝﾆｬﾛ」的なエラー吐いたらまぁ、適宜入れてください。(投げやり)
+
+で、ここまで来ればもうPythonが使えるので、`get-platformio.py`があるディレクトリに移動してもらって、\
+`python get-platformio.py`だの`python3 get-platformio.py`だのって実行すればいーわけです。
+
+実行が終わってなんか`Success`とかなんかそんな感じの成功してそうな雰囲気の単語があったら勝ちです。\
+その場合一緒に「このディレクトリをシステムの`PATH`に追加してねー」って感じの文言とともにインストール先ディレクトリが示されてるはずなので、\
+これを`PATH`に追加します。`PATH`ってなんやねんって人とかどーやって追加すんねんって人はggってください。たぶん秒で引っ掛かります。(投げやり)
+
+追加し終わった後はどこででも`platformio`コマンドが使えるはずなので実行してみてください。なんかサブコマンドの一覧とか出てきたらいいと思います。
+
+閑話休題。
+
+さて、PlatformIOも入った所でカキコしましょっか。
+
+[ESP32-DS4]をお手元のGitでクローンするなりGitHub上でZipに固めて落とすなり色々方法はありますがまぁお好みで。
+
+落としたらそのままそのディレクトリに行って、`platformio run -t upload`を実行します。これでいーはず。
+
+## ソース書ク丼
+
+最近新潟のソースカツ丼食ったんだけどアレめっちゃうまい(語彙力)。ってのは置いといて。
+
+ソース書いてくんすが、その前に[ESP32-DS4-driver]をプロジェクトに導入しもす。
+
+まず、プロジェクトルート(`<プロジェクト名>.ioc`とか`CMakeLists.txt`あるトコ)に行ってもらって、\
+そこに`ESP32-DS4-driver`って名前のディレクトリの中に内容が入ってるように落としてきてください。\
+例えばGitリポジトリで管理してるなら`git submodule add https://github.com/ms0503/ESP32-DS4-driver.git`でいいし、\
+Gitリポジトリじゃないなら単に`git clone https://github.com/ms0503/ESP32-DS4-driver.git`だし、\
+ダウンロードしてきたんなら`ESP32-DS4-driver-main.zip/ESP32-DS4-driver-main`を持ってきて`ESP32-DS4-driver`にリネームすればいいし、\
+まぁ各自いい感じにヨロシク。(投げやり)
+
+で、次に`CMakeLists.txt`を開いて、40行目とかなんかその辺に、
+
+```cmake
+add_subdirectory(cmake/stm32cubemx)
+```
+
+って書いてるんでその下にでも
+
+```cmake
+add_subdirectory(ESP32-DS4-driver/c)
+```
+
+って書いといてください。これでCMakeくんがESP32-DS4-driverを認識します。\
+あとは70行目とかその辺に
+
+```cmake
+    # Add user defined libraries
+```
+
+ってあるのでその下(言わずもがなカッコ内)に
+
+```cmake
+esp32-ds4
+```
+
+って追加しといてください。そうすればそのセクションは
+
+```cmake
+# Add linked libraries
+target_link_libraries(${CMAKE_PROJECT_NAME}
+    stm32cubemx
+
+    # Add user defined libraries
+    esp32-ds4
+)
+```
+
+みたいになってるはず...ですよね？そうなってればおｋ。
+
+(TODO: ESP32-DS4-driverのC向け実装待ち)
 
 ## 次回予告
 
@@ -21,3 +144,10 @@ title-short: コントローラーを受信してみよう
 [前へ](6)・[次へ](8)
 
 [ロボット制御入門Topへ](..#%E3%83%AD%E3%83%9C%E3%83%83%E3%83%88%E5%88%B6%E5%BE%A1%E5%85%A5%E9%96%80)
+
+[esp32-ds4]: https://github.com/ms0503/ESP32-DS4
+[esp32-ds4-driver]: https://github.com/ms0503/ESP32-DS4-driver
+[everyday shumai party!]: https://github.com/ms0503/circuit-esp32-base
+[uartコネクターのピンアサイン]: /assets/lessons/program/com-connector.png
+[uartピンの場所]: /assets/lessons/program/com-pin.png
+[`get-platformio.py`]: https://raw.githubusercontent.com/platformio/platformio-core-installer/master/get-platformio.py
